--- a/multilingual-app/package.json
+++ b/multilingual-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@georgefikri/design-system": "^1.0.3",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
